# tinkoff-analytics

./: .gitignore  README.md  bot.py  go.py  pyproject.toml  requirements.txt  tinkoffapi.py  utils.py
